--- a/FlowModelDesktop/MainWindow.xaml
+++ b/FlowModelDesktop/MainWindow.xaml
@@ -53,9 +53,9 @@
                         <TextBlock Grid.Row="1" Grid.Column="0" Margin="3">Ширина, м</TextBlock>
                         <TextBlock Grid.Row="2" Grid.Column="0" Margin="3">Глубина, м</TextBlock>
 
-                        <xctk:DecimalUpDown Grid.Row="0" Grid.Column="1" Margin="3" Value="{Binding InputData.L}"></xctk:DecimalUpDown>
-                        <xctk:DecimalUpDown Grid.Row="1" Grid.Column="1" Margin="3" Value="{Binding InputData.W}"></xctk:DecimalUpDown>
-                        <xctk:DecimalUpDown Grid.Row="2" Grid.Column="1" Margin="3" Value="{Binding InputData.H}"></xctk:DecimalUpDown>
+                        <xctk:DecimalUpDown Name="L" Grid.Row="0" Grid.Column="1" Margin="3" Value="{Binding InputData.L}" ValueChanged="L_ValueChanged" />
+                        <xctk:DecimalUpDown Name="W"  Grid.Row="1" Grid.Column="1" Margin="3" Value="{Binding InputData.W}" ValueChanged="W_ValueChanged"></xctk:DecimalUpDown>
+                        <xctk:DecimalUpDown Name="H" Grid.Row="2" Grid.Column="1" Margin="3" Value="{Binding InputData.H}" ValueChanged="H_ValueChanged"></xctk:DecimalUpDown>
                     </Grid>
                 </GroupBox>
 
@@ -118,8 +118,8 @@
                     <TextBlock Grid.Row="0" Grid.Column="0" Margin="3,3,3,3" Grid.ColumnSpan="2">Скорость движения крышки, м/с</TextBlock>
                     <TextBlock Grid.Row="1" Grid.Column="0" Margin="3,3,3,3" Grid.ColumnSpan="2">Температура крышки, °C</TextBlock>
 
-                    <xctk:DecimalUpDown Grid.Row="0" Grid.Column="2" Margin="3,3,3,3" Increment="0.5" Value="{Binding InputData.Vu}"></xctk:DecimalUpDown>
-                    <xctk:DecimalUpDown Grid.Row="1" Grid.Column="2" Margin="3,3,3,3" Value="{Binding InputData.Tu}"></xctk:DecimalUpDown>
+                    <xctk:DecimalUpDown Name="Vu" Grid.Row="0" Grid.Column="2" Margin="3,3,3,3" Increment="0.5" Value="{Binding InputData.Vu}" ValueChanged="Vu_ValueChanged"></xctk:DecimalUpDown>
+                    <xctk:DecimalUpDown Name="Tu" Grid.Row="1" Grid.Column="2" Margin="3,3,3,3" Value="{Binding InputData.Tu}" ValueChanged="Tu_ValueChanged"></xctk:DecimalUpDown>
 
                 </Grid>
             </GroupBox>
@@ -141,7 +141,7 @@
                             </Grid.ColumnDefinitions>
 
                             <TextBlock Grid.Column="0" Margin="3">Шаг расчета по длине канала, м</TextBlock>
-                            <xctk:DecimalUpDown Grid.Column="1" Value="{Binding InputData.DeltaZ}"></xctk:DecimalUpDown>
+                            <xctk:DecimalUpDown Name="DeltaZ" Grid.Column="1" Value="{Binding InputData.DeltaZ}" ValueChanged="DeltaZ_ValueChanged"></xctk:DecimalUpDown>
                         </Grid>
                     </GroupBox>
 
