--- a/FlowModelDesktop/AuthorizationWindow.xaml
+++ b/FlowModelDesktop/AuthorizationWindow.xaml
@@ -8,41 +8,41 @@
         Title="Авторизация" Height="300" Width="300" MinWidth="300" MinHeight="300">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.4*"></RowDefinition>
-            <RowDefinition Height="0.4*"></RowDefinition>
-            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="0.2*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="0.15*"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="0.15*"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="0.5*"/>
         </Grid.RowDefinitions>
-
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.1*"></ColumnDefinition>
-            <ColumnDefinition Width="0.8*"></ColumnDefinition>
-            <ColumnDefinition Width="0.1*"></ColumnDefinition>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
+        <Label Grid.Row ="1" Grid.Column="1">Логин:</Label>
+        <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Username}"></TextBox>
+
+        <Label Grid.Row ="4" Grid.Column="1">Пароль:</Label>
+        <TextBox Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Password}"></TextBox>
+
+        <Grid Grid.Row="7" Grid.ColumnSpan="4">
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="0.33*"/>
+                <RowDefinition Height="0.33*"/>
+                <RowDefinition Height="0.33*"/>
             </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.33*"/>
+                <ColumnDefinition Width="0.66*"/>
+                <ColumnDefinition Width="0.33*"/>
+            </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0" Content="Логин" VerticalAlignment="Bottom"/>
-            <TextBox Grid.Row="1" Text="{Binding Username}"
-                     HorizontalAlignment="Left" TextWrapping="Wrap" Width="220"/>
+            <Button Grid.Row="1" Grid.Column="1" Command="{Binding LoginCommand}">Войти</Button>
         </Grid>
-
-        <Grid Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center">
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-
-            <Label Grid.Row="0" Content="Пароль" VerticalAlignment="Bottom"/>
-            <TextBox Grid.Row="1" Text="{Binding Password}"
-                     HorizontalAlignment="Left" TextWrapping="Wrap" Width="220"/>
-        </Grid>
-
-        <Button Grid.Row="2" Grid.Column="1" Command="{Binding AuthorizeCommand}"
-                Content="Войти" Margin="10"
-                HorizontalAlignment="Center" Width="135"></Button>
     </Grid>
 </Window>
