--- a/FlowModelDesktop/AuthorizationWindow.xaml
+++ b/FlowModelDesktop/AuthorizationWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FlowModelDesktop"
         mc:Ignorable="d"
-        Title="Авторизация" Height="300" Width="300" MinWidth="300" MinHeight="300">
+        Title="Авторизация" Height="300" Width="300" MinWidth="300" MinHeight="300" FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.2*"/>
@@ -42,7 +42,7 @@
                 <ColumnDefinition Width="0.33*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Row="1" Grid.Column="1" Command="{Binding LoginCommand}">Войти</Button>
+            <Button Grid.Row="1" Grid.Column="1" Command="{Binding AuthorizeCommand}">Войти</Button>
         </Grid>
     </Grid>
 </Window>
